feat: api 영화 개봉일 & 출연배우 불러오기

--- a/review.html
+++ b/review.html
@@ -19,10 +19,11 @@
                 </div>
             </div>
             <!-- <img src="./img/poster.jpg" alt="해리포터와 마법사의 돌"> -->
-            <!-- <video src="https://www.kmdb.or.kr/trailer/trailerPlayPop?pFileNm=MK060920_P02.mp4" autoplay playsinline loop></video> -->
-            <!-- <iframe src="https://www.kmdb.or.kr/trailer/trailerPlayPop?pFileNm=MK060920_P02.mp4" width="100%" height="100%">
-                <p>사용 중인 브라우저는 iframe을 지원하지 않습니다.</p>
-            </iframe> -->
+            <!-- <video src="https://www.kmdb.or.kr/trailer/play/MK060920_P02.mp4" autoplay></video> -->
+            <!-- "https://www.kmdb.or.kr/trailer/trailerPlayPop?pFileNm=MK049879_P02.mp4" -->
+                        <!-- https://www.kmdb.or.kr/trailer/play/MK060265_P02.mp4  이건 성공한 코드-->
+            <!-- https://www.kmdb.or.kr/trailer/trailerPlayPop?pFileNm=MK060920_P02.mp4 -->
+
         </section>
 
         <section id="movie_info_sub_container">
@@ -41,12 +42,6 @@
                         출연자
                     </p>
                     <ul class="cast_list">
-                        <li>홍길동</li>
-                        <li>장발장</li>
-                        <li>이길동</li>
-                        <li>정발장</li>
-                        <li>고길동</li>
-                        <li>박발장</li>
                     </ul>
                 </div>
 
@@ -97,8 +92,7 @@
                     <p class="info_sub_title">
                         개봉일
                     </p>
-                    <p>
-                        2222.02.22
+                    <p class="movie_release_date">
                     </p>
                 </div>
 
