feat: 화면 구현 수정

--- a/review.html
+++ b/review.html
@@ -12,14 +12,19 @@
 </head>
 <body>
     <main id="movie_info_container">
-        <section id="movie_poster">
+        <section id="movie_poster_trailer">
+
             <div class="poster_box">
-                <div class="movie_title">
-                    해리포터와 마법사의 돌
-                </div>
+                <img src="http://file.koreafilm.or.kr/thm/02/99/18/31/tn_DPK021645.jpg" alt="">
+                <p>해리포터와 아즈카반의 죄수</p>
             </div>
-            <!-- <img src="./img/poster.jpg" alt="해리포터와 마법사의 돌"> -->
-            <!-- <video src="https://www.kmdb.or.kr/trailer/play/MK060920_P02.mp4" autoplay></video> -->
+
+            <div class="trailer_box">
+                <video src="https://www.kmdb.or.kr/trailer/play/MK060920_P02.mp4" autoplay muted loop></video>
+            </div>
+
+
+            <!-- <video src="https://www.kmdb.or.kr/trailer/play/MK060920_P02.mp4" autoplay muted loop></video> -->
             <!-- "https://www.kmdb.or.kr/trailer/trailerPlayPop?pFileNm=MK049879_P02.mp4" -->
                         <!-- https://www.kmdb.or.kr/trailer/play/MK060265_P02.mp4  이건 성공한 코드-->
             <!-- https://www.kmdb.or.kr/trailer/trailerPlayPop?pFileNm=MK060920_P02.mp4 -->
@@ -110,9 +115,6 @@
                         영화 장르
                     </p>
                     <ul class="genre_list">
-                        <li>호러</li>
-                        <li>로맨스</li>
-                        <li>코미디</li>
                     </ul>
                 </div>
                 <div class="movie_director movie_common">
@@ -120,7 +122,6 @@
                         영화 감독
                     </p>
                     <span class="director_name">
-                        장발장
                     </span>
                 </div>
             </article>
