feat: 레이아웃 변경

--- a/review.html
+++ b/review.html
@@ -20,7 +20,7 @@
             </div>
 
             <div class="trailer_box">
-                <!-- <video src="https://www.kmdb.or.kr/trailer/play/MK060920_P02.mp4" autoplay muted loop></video> -->
+                <video src="https://www.kmdb.or.kr/trailer/play/MK060920_P02.mp4" autoplay muted loop></video>
             </div>
 
 
